--- a/admin_panel/templates/basetemplate.html
+++ b/admin_panel/templates/basetemplate.html
@@ -43,7 +43,7 @@
     <h4 class="text-center text-white mb-4">Admin Dashboard</h4>
     <a href="{% url 'admin_dashboard' %}"><i class="fas fa-chart-line"></i> Dashboard Overview</a>
     <a href="{% url 'admin_products' %}"><i class="fas fa-box"></i> Products</a>
-    <a href="{% url 'admin_sales' %}"><i class="fas fa-chart-pie"></i> Sales</a>
+    <a href="{% url 'sales' %}"><i class="fas fa-chart-pie"></i> Sales</a>
     <a href="{% url 'admin_customers' %}"><i class="fas fa-user-cog"></i> Customers</a>
     <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
 </div>
