--- a/ekart/templates/base.html
+++ b/ekart/templates/base.html
@@ -73,7 +73,7 @@
                     <a class="nav-link text-white" href="{% url 'home' %}"><i class="fas fa-home me-1"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="fas fa-box me-1"></i> Order</a>
+                    <a class="nav-link text-white" href="{% url 'order_details' %}"><i class="fas fa-box me-1"></i> Order</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="{% url 'cart' %}"><i class="fas fa-shopping-cart me-1"></i> Cart</a>
