--- a/ekart/templates/cart.html
+++ b/ekart/templates/cart.html
@@ -73,8 +73,8 @@
         overflow: hidden;
     }
     .thead-light th {
-        background-color: #f0c14b;
-        color: #111;
+        background-color: #3cb371;
+        color: white;
         font-weight: bold;
     }
     .btn {
