--- a/admin_panel/templates/admin_customers.html
+++ b/admin_panel/templates/admin_customers.html
@@ -13,25 +13,19 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Username</th>
+                        <th scope="col">UserID</th>
                         <th scope="col">Email</th>
+                        <th scope="col">Password</th>
                         <th scope="col">Date Joined</th>
-                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for customer in customers %}
                     <tr>
-                        <th scope="row">{{ forloop.counter }}</th>
-                        <td>{{ customer.username }}</td>
+                        <td>{{ customer.id }}</td>
                         <td>{{ customer.email }}</td>
-                        <td>{{ customer.date_joined }}</td>
-                        <td>
-                            <a href="" class="btn btn-info btn-sm">View</a>
-                            <a href="" class="btn btn-warning btn-sm">Edit</a>
-                            <a href="" class="btn btn-danger btn-sm">Delete</a>
-                        </td> 
+                        <td>{{ customer.password }}</td>
+                        <td>{{ customer.created_at }}</td>
                     </tr>
                     {% empty %}
                     <tr>
@@ -42,10 +36,5 @@
             </table>
         </div>
     </div>
-
-    <!-- Add Customer Button -->
-    <div class="mt-3">
-        <a href="" class="btn btn-primary">Add New Customer</a>
-    </div> 
 </div>
 {% endblock %}
