--- a/admin_panel/templates/admin_products.html
+++ b/admin_panel/templates/admin_products.html
@@ -30,7 +30,14 @@
             <tr>
                 <td><img src="{{ product.image.url }}" alt="{{ product.title }}" width="50" height="50"></td>
                 <td>{{ product.title }}</td>
-                <td>₹{{ product.price }}</td>
+                <td>
+                    {% if product.offer_price %}
+                        <span style="text-decoration: line-through;">₹{{ product.price }}</span>
+                        <span class="text-success"> ₹{{ product.offer_price }}</span>
+                    {% else %}
+                        ₹{{ product.price }}
+                    {% endif %}
+                </td>
                 <td>{{ product.stock_quantity }}</td>
                 <td>{{ product.category.name }}</td>
                 <td>
