--- a/admin_panel/templates/admin_sales.html
+++ b/admin_panel/templates/admin_sales.html
@@ -25,7 +25,7 @@
             {% for sale in sales %}
             <tr>
                 <td>{{ sale.order.order_id }}</td>
-                <td>{{ sale.order.user.username }}</td>
+                <td>{{ sale.order.user }}</td>
                 <td>{{ sale.product.title }}</td>
                 <td>{{ sale.quantity }}</td>
                 <td>₹{{ sale.total_price }}</td>
