--- a/admin_panel/templates/basetemplate.html
+++ b/admin_panel/templates/basetemplate.html
@@ -45,17 +45,19 @@
     <a href="{% url 'admin_products' %}"><i class="fas fa-box"></i> Products</a>
     <a href="{% url 'sales' %}"><i class="fas fa-chart-pie"></i> Sales</a>
     <a href="{% url 'admin_customers' %}"><i class="fas fa-user-cog"></i> Customers</a>
+    <a href="{% url 'category_list' %}"><i class="fas fa-tags"></i> Categories</a>
+    <a href="{% url 'supplier_list' %}"><i class="fas fa-truck"></i> Suppliers</a>
+    <a href="{% url 'payment_details' %}"><i class="fas fa-money-check-alt"></i> Payments</a>
+    <a href="{% url 'advertisement_management' %}"><i class="fas fa-bullhorn"></i> Manage Advertisements</a> 
     <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
 </div>
 
-<!-- Content Area -->
+<!-- Main Content Area -->
 <div class="content">
     {% block content %}
     {% endblock %}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 </body>
 </html>
