--- a/ekart/templates/base.html
+++ b/ekart/templates/base.html
@@ -53,7 +53,18 @@
             .alert {
                 margin-bottom: 1rem; /* Adjust margin as needed */
             }
+            .carousel-indicators button {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: #666;
+            }
+            
+            .carousel-indicators .active {
+                background-color: #333;
+            }
     </style>
+    {% block styles %}{% endblock styles %}
 </head>
 <body>
 
@@ -152,6 +163,7 @@
     </div>
 </footer>
 
+{% block scripts %}{% endblock scripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
